# docling

./: .env.example  .gitattributes  .gitignore  .max-lines-ignore  .pre-commit-config.yaml  24UAM153 - SOWMYA M_extracted.txt  404.html  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION_EXAMPLE.md  DCO_FINAL_FIX.txt  DCO_FIX.txt  DCO_REMEDIATION.txt  Dockerfile  FINAL_CERT.txt  FINAL_CERT_10.txt  FINAL_CERT_7.txt  FINAL_CERT_VLM.txt  FINAL_DCO_FIX.txt  Makefile  PR_DRAFT_286.md  README.md  TIMEOUT_FIX_DOCUMENTATION.md  _tmp.html  azure_bridge.py  debug_ocr.py  dprint.json  e2e.sh  e2e_results.md  extract_text.py  fix_chunk_overflow.patch  fix_landscape_table_chunk_overflow.py  index.html  justfile  list_after_num_headers.md  llms.txt  main.py  mkdocs.yml  objects.inv  (+14 more)
build-script/code-serving-doc-parser/: .dockerignore  Dockerfile  Dockerfile.gpu  README.md  build.config  build.sh  pyproject.toml
build-script/code-serving-doc-parser/gunicorn/: gunicorn_conf.py
build-script/code-serving-doc-parser/scripts/: entrypoint.sh  init.sh
build-script/code-serving-doc-parser/src/: log_watcher.py  main.py
build-script/code-serving-doc-parser/src/common/: env_loader.py  logger.py  msg_queue.py  settings.py
build-script/code-serving-doc-parser/src/service/: service.py
build-script/code-serving-doc-parser/supervisor/: non-root-base.conf  supervisord.conf
docs/examples/third_party_plugins/: main.py  pyproject.toml
docs/examples/third_party_plugins/api_usage/: api_usage_plugin.py
genon/preprocessor/: README.md  USER_MANUAL.md  pyproject.prod.toml  pyproject.toml
genon/preprocessor/configs/: supervisor.conf
genon/preprocessor/converters/: hwp_recovery.py  xlsx_processor.py
genon/preprocessor/converters/hwp_to_pdf/: __init__.py  availability.py  base.py  chain.py  config.py  libreoffice.py  pdf_sdk.py  rhwp.py
genon/preprocessor/docker/: Dockerfile  Dockerfile.enterprise  Dockerfile.opensource  Dockerfile.pro  Dockerfile.standard  Dockerfile.synap  README.md
genon/preprocessor/env/: .env.dev  .env.prod
genon/preprocessor/examples/code_serving/: serving_gateway_preprocess_test.py  serving_gateway_preprocess_test.sh  serving_gateway_preprocess_test_curl.sh  serving_gateway_test.py  serving_gateway_test.sh  serving_gateway_test_curl.sh
genon/preprocessor/examples/parse_chunk/: parse_chunk_test.py  parse_chunk_test.sh
genon/preprocessor/facade/: README.md  attachment_processor.py  attachment_processor_origin.py  basic_processor.py  basic_processor_origin.py  chunking_processor.py  config.yaml  convert_processor.py  docling_viewer.py  intelligent_processor.py  intelligent_processor_law.py  intelligent_processor_ocr.py  intelligent_processor_origin.py  parser_processor.py  test.py  visualization.py
genon/preprocessor/facade/enrichment/: __init__.py  base_enricher.py  body_summary.py  chart_detection.py  custom_fields_enricher.py  doc_summary.py  enrichment_config.py  field_transforms.py  image_description.py  metadata_enricher.py  page_description.py  prompt_files.py  prompt_template.py  table_description.py  thinking.py
genon/preprocessor/facade/evaluation/: preprocess.py
genon/preprocessor/facade/gitbook_doc/: attach.md  attachment_processor.md  code_serving.md  convert_processor.md  guardrail_regex_filters.md  guardrail_workflow_setup.md  installation.md  intelligent_processor.md  intro.md  parser_processor.md  workflow_guardrail.py
genon/preprocessor/facade/guardrail/: __init__.py  client.py  config.py  matcher.py  source_text.py
genon/preprocessor/facade/legacy/: BOK_적재용_규정.py  BOK_적재용_내부.py  BOK_적재용_외부.py  BOK_첨부용.py  OKDS_pdf.py  law_preprocess.py  law_preprocess_genos.py  origin_preprocess.py  preprocess_ocr.py  다우기술.py  삼성증권리서치센터.py  서부발전전처리기.py  적재용(규정).py  적재용(규정)v2.py  적재용(내부).py  적재용(내부)_gitbook.md  적재용(외부)_gitbook.md  적재용(외부)_ocr.py  첨부용_gitbook.md
genon/preprocessor/resource/: attachment_processor_config.yaml  chunking_processor_config.yaml  config.yaml  convert_processor_config.yaml  intelligent_processor_config.yaml  parser_processor_config.yaml  prompt_chart_description_default.md  prompt_doc_summary.md  prompt_metadata_default_system.md  prompt_page_image_description_fast.md  prompt_toc_default_system.md  prompt_toc_default_user.md
genon/preprocessor/resource_dev/: attachment_processor_config.yaml  chunking_processor_config.yaml  convert_processor_config.yaml  custom_field_authors.py  custom_field_authors.yaml  intelligent_processor_config.yaml  parser_processor_config.yaml  prompt_custom_fields_authors_system.md  prompt_custom_fields_authors_user.md  prompt_image_description_default.md  prompt_metadata_default_user.md  prompt_page_image_description_default.md  prompt_table_description_default.md  prompt_table_refine_combined.md  prompt_toc_default_user.md
genon/preprocessor/resources/: stream_fix_xobject_reload.h
genon/preprocessor/sample_files/: README.md  html_sample.html  table.jsonl
genon/preprocessor/scripts/: register.config  register_image.sh
genon/preprocessor/src/: genos_utils.py  main.py  preprocessor.py  utils.py
genon/preprocessor/src/common/: exception.py  settings.py
genon/preprocessor/src/util/: minio_resource.py
genon/preprocessor/tests/: conftest.py  teds_metric.py
genon/preprocessor/tests/regression/: README.md  test_docx_regression.py  test_enrichment_config_regression.py  test_html_regression.py  test_hwp_regression.py  test_hwp_to_pdf_regression.py  test_hwpx_regression.py  test_md_regression.py  test_pdf_regression.py  test_pptx_regression.py
genon/preprocessor/tests/smoke/: test_enrichment_smoke.py  test_hwp_smoke.py  test_hwp_to_pdf_smoke.py  test_hwpx_smoke.py  test_parser_processor_dotsocr_table_smoke.py  test_parser_processor_smoke.py  test_pdf_convert_smoke.py
genon/preprocessor/tests/unit/: test_attachment_chunk_config_unit.py  test_attachment_chunking.py  test_attachment_config_unit.py  test_attachment_hybrid_chunker.py  (+30 more)
genon/serving/ocr_paddle_server/: ocr_server.py  pyproject.toml  test.py
genon/serving/paddle/: README-B300.md  README.md  pyproject-b300.toml  pyproject.toml
(+1700 files in other folders)
