[project]
name = "docling-workspace"
version = "2.90.0"
description = "Docling workspace - do not install directly, use 'docling' or 'docling-slim' packages"
requires-python = ">=3.10,<4.0"

# Minimal dependencies for workspace management
dependencies = [
  "docling"
]

[tool.uv.workspace]
members = ["packages/docling-slim", "packages/docling"]

[tool.uv.sources]
docling = { workspace = true }

[tool.uv]
package = false
default-groups = "all"

[tool.setuptools.packages.find]
include = ["docling*"]

[tool.ruff]
target-version = "py310"
line-length = 88
respect-gitignore = true

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint]
select = [
  "C",  # flake8-comprehensions
  "C9", # mccabe
  "E",   # pycodestyle errors (default)
  "F",   # pyflakes (default)
  "I",   # isort
  "PD",  # pandas-vet
  "PIE", # pie
  "Q", # flake8-quotes
  "RUF", # Enable all ruff-specific checks
  "S307", # eval
  "W",     # pycodestyle warnings
  "ASYNC", # async
  "UP",    # pyupgrade
]

ignore = [
  "C408",   # Unnecessary `dict()` call (rewrite as a literal)
  "E501",   # Line too long, handled by ruff formatter
  "D107",   # "Missing docstring in __init__",
  "F401",   # imported but unused; consider using `importlib.util.find_spec` to test for "
  "F811",   # "redefinition of the same function"
  "PL",     # Pylint
  "RUF012", # Mutable Class Attributes
  "UP006",  # List vs list, etc
  "UP007",  # Option and Union
  "UP035",  # `typing.Set` is deprecated, use `set` instead"
]

[tool.ruff.lint.pep8-naming]
classmethod-decorators = [
  "pydantic.validator",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
"tests/*.py" = ["ASYNC"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.mypy]
pretty = true
no_implicit_optional = true
plugins = "pydantic.mypy"
python_version = "3.10"

[[tool.mypy.overrides]]
module = [
  "docling_parse.*",
  "pypdfium2.*",
  "networkx.*",
  "scipy.*",
  "filetype.*",
  "tesserocr.*",
  "docling_ibm_models.*",
  "easyocr.*",
  "ocrmac.*",
  "onnxruntime.*",
  "mlx_vlm.*",
  "lxml.*",
  "huggingface_hub.*",
  "transformers.*",
  "pylatexenc.*",
  "vllm.*",
  "qwen_vl_utils.*",
  "arelle.*",
  "websockets.*",
  "torchvision.*",
  "torchvision.transforms.*",
]
ignore_missing_imports = true

[tool.semantic_release]
# for default values check:
# https://github.com/python-semantic-release/python-semantic-release/blob/v7.32.2/semantic_release/defaults.cfg

version_source = "tag_only"
branch = "main"

# configure types which should trigger minor and patch version bumps respectively
# (note that they must be a subset of the configured allowed types):
parser_angular_allowed_types = "build,chore,ci,docs,feat,fix,perf,style,refactor,test"
parser_angular_minor_types = "feat"
parser_angular_patch_types = "fix,perf"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
