[project]
name = "doc-parser-serving"
version = "0.1.0"
description = "doc-parser code-serving base image deps (genon/preprocessor uv 정보 기반)"
readme = "README.md"
requires-python = ">=3.11,<4.0"

# 의존성은 genon/preprocessor 의 uv 정보를 기반으로 한다.
#   - preprocessor 의 직접 deps (단, vendored `docling` 패키지 자체는 제외 —
#     런타임에 clone 된 repo 가 /app/src/service 에서 제공하므로 pip 설치 대상 아님).
#   - vendored docling(repo 루트 pyproject) 의 직접 deps — docling import 에 필요한
#     easyocr/rtree/tree-sitter*/scipy/pandas/openpyxl/marko/lxml/pylatexenc 등.
#   - 코드서빙 harness 필수 deps — pydantic-settings(settings), python-dotenv(env_loader).
# 버전 충돌은 더 구체적인 pin(주로 preprocessor) 을 채택했다.
# ⚠️ preprocessor / repo 루트 docling 의 deps 가 바뀌면 이 목록도 동기화할 것.
dependencies = [
    # ── docling 계열 (docling 패키지 자체는 제외) ──────────────────────────────
    "docling-core[chunking]==2.62.0",
    "docling-ibm-models==3.10.3",
    "docling-parse==4.1.0",
    # ── 코드서빙 harness (src/common, src/log_watcher) ────────────────────────
    "fastapi>=0.115.12",
    "starlette>=0.52.1",
    "uvicorn==0.21.1",
    "gunicorn==23.0.0",
    "python-multipart==0.0.22",
    "pydantic>=2.0.0,<3.0.0",
    "pydantic-settings>=2.3.0,<3.0.0",
    "python-dotenv>=1.0,<2.0",
    "aiofile==3.9.0",
    "aiofiles==24.1.0",
    "aiohttp==3.13.4",
    "httpx>=0.27.0",
    "watchfiles==1.1.0",
    "pika==1.3.2",
    "minio==7.2.20",
    # ── 문서/파싱/OCR (preprocessor + docling deps) ──────────────────────────
    "unstructured==0.18.32",
    "unstructured-inference>=1.2.0",
    "unstructured-pytesseract==0.3.15",
    "pytesseract==0.3.13",
    "pymupdf>=1.26.4",
    "pypdfium2>=5.0.0,<6.0.0",
    "pdfminer-six==20250506",
    "pdf2image==1.17.0",
    "pi-heif==0.22.0",
    "python-docx==1.1.2",
    "python-pptx==1.0.2",
    "openpyxl>=3.1.5,<4.0.0",
    "pyhwp==0.1b15",
    "python-magic==0.4.27",
    "filetype>=1.2.0,<2.0.0",
    "weasyprint==68.1",
    "markdown==3.8.2",
    "markdown2>=2.5.4",
    "marko>=2.1.2,<3.0.0",
    "lxml>=4.0.0,<6.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "pylatexenc>=2.10,<3.0",
    "opencv-python>=4.11.0.86",
    "pillow>=10.0.0,<12.0.0",
    "wand",
    "rtree>=1.3.0,<2.0.0",
    "chardet==5.2.0",
    # ── ML / NLP ──────────────────────────────────────────────────────────────
    "transformers==4.57.6",
    "accelerate==1.12.0",
    "easyocr>=1.7,<2.0",
    "huggingface-hub>=0.23,<1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.11",
    "langchain-community>=0.4.1",
    "numpy==2.3.4",
    "scipy>=1.6.0,<2.0.0",
    "pandas>=2.1.4,<3.0.0",
    "pyarrow==22.0.0",
    # ── 코드/텍스트 파싱 (docling deps) ───────────────────────────────────────
    "tree-sitter>=0.23.2",
    "tree-sitter-c>=0.23.6",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-javascript>=0.23.1",
    "tree-sitter-python>=0.23.6",
    "tree-sitter-typescript>=0.23.2",
    # ── 기타 (preprocessor + docling deps) ───────────────────────────────────
    "pydub==0.25.1",
    "requests>=2.32.2,<3.0.0",
    "certifi>=2024.7.4",
    "typer>=0.12.5,<0.17.0",
    "tqdm>=4.65.0,<5.0.0",
    "pluggy>=1.0.0,<2.0.0",
    "grpcio",
    "grpcio-tools",
    "hatchling>=1.27.0",
    "audioop-lts; python_version >= '3.13'",
]
