[project]
name = "doc-parser-paddle-serving"
version = "1.0.0"
description = "PaddleX serving images split by uv groups: common (paddlex + serving), ocr, vllm."
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "Proprietary" }

# 공통(항상 설치): 요청하신 대로 paddlex + serving + REST
dependencies = [
    "paddlex==3.3.6",
    "paddlex[serving,ocr,hpi-gpu]",
    "fastapi==0.120.1",
    "uvicorn>=0.21,<0.22",
]

[tool.uv]
# 내부 미러 예시
# index-url = "https://your-mirror/simple"
# extra-index-url = ["https://download.pytorch.org/whl/cu126"]

# ✅ 여기!
dev-dependencies = [
#    "ruff>=0.6,<1",
#    "pytest>=8,<9",
#    "pytest-asyncio>=0.23,<0.24",
#    "httpx>=0.27,<0.28",
#    "pre-commit>=3.8,<4",
#    "rich>=13,<14",
#    "paddleocr==3.1.0",
#    "langchain==0.3.27",
#    "paddlepaddle==3.2.0"
]
# 필요 시 내부 미러 설정
# default-index = "https://your-mirror/simple"
# index = ["https://download.pytorch.org/whl/cu126"]

#[project.optional-dependencies]
#gpu = [
#    "paddlepaddle-gpu==3.2.0"
#]
#cpu = [
#    "paddlepaddle==3.2.0"
#]
## 선택 설치(uv sync --group ocr)
#ocr = [
#  "paddlex[ocr]"
#]
#
## 선택 설치(uv sync --group vllm)
#vllm = [
#  "paddlex[genai-vllm-server]"
#]


# (선택) PEP 621 extras로도 노출하고 싶으면 빈 배열이나 실제 패키지 나열 필요
# 굳이 필요 없다면 전체 섹션을 생략하세요.
#[project.optional-dependencies]
#ocr = []
#vllm = []
#dev = []
#
#[build-system]
#requires = ["uv>=0.4"]
#build-backend = "uv.build"