[project]
name = "doc-parser-ocr"
version = "1.0.0"
requires-python = ">=3.9,<4.0"
description = "PaddleX OCR serving"

# ðŸ‘‡ ì—¬ê¸°ì„œë¶€í„°ëŠ” uvê°€ ì „ë¶€ ì„¤ì¹˜
dependencies = [
    # GPU ë¹Œë“œ
    "paddlepaddle-gpu==3.2.0",
    # ë„ˆê°€ ì“°ë˜ ì• ë“¤
    "paddlex==3.3.6",
    "paddlex[serving,ocr]",
    "uvicorn>=0.21,<0.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ðŸ‘‡ ì—¬ê¸°ê°€ ì¤‘ìš”
# uvê°€ "íŒŒì´íŒŒì´ ë§ê³  ì´ ë ˆí¬ë„ ê°™ì´ ë´ë¼" ë¼ê³  ì•Œë ¤ì£¼ëŠ” ë¶€ë¶„
# ìµœì‹  uv ë¬¸ë²• ê¸°ì¤€ (ë„íê°€ ì¡°ê¸ˆì”© ë°”ë€Œì–´ì„œ ì´ë ‡ê²Œ ì“°ëŠ” ê²Œ ì œì¼ ì•ˆì „í•´)
[tool.uv]
package=false
# pypië„ ë³´ê³ ,
index-url = "https://pypi.org/simple"
# paddlepaddle ì „ìš© ë ˆí¬ëŠ” extraë¡œ ì¶”ê°€
extra-index-url = ["https://www.paddlepaddle.org.cn/packages/stable/cu126/"]
# í•„ìš”í•˜ë©´ ì¸ì¦/ë¯¸ëŸ¬ ë” ë„£ì„ ìˆ˜ ìžˆìŒ
